2006-12-01  Kevin Kenny  <kennykb@acm.org>

	TIP #300 IMPLEMENTATION

	* doc/font.n:			Added a [font actual $font $char]
	* generic/tkFont.c:		variant that introspects the font
	* generic/tkFont.h:		that is chosen to render a given
	* macosx/tkMacOSXFont.c:	character in a given nominal font.
	* tests/font.test:		Added documentation and test cases
	* unix/tkUnixFont.c:		for the new command syntax.
	* unix/tkUnixRFont.c:
	* win/tkWinFont.c:
	
2006-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/wm.n, tests/winWm.test:
	* win/tkWinWm.c: add -transparentcolor attribute for Windows.

2006-12-01  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.h, generic/ttk/ttkLayout.c:
	Dead code removal.

2006-11-30  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (Tk_MessageBoxObjCmd): fix inability to use
	buttons with standard Escape key binding as -default button (reported
	on tcl-mac by Hans-Christoph Steiner).

	* macosx/tkMacOSXWm.c (WmAttributesCmd): fix getting [wm attr -alpha].
	[Bug 1581932]

2006-11-28  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/fonts.tcl: Clean up temporary variables.

2006-11-27  Kevin Kenny  <kennykb@acm.org>

	* unix/configure.in: Corrected Xft configuration so that Xft
	actually does get turned on when available.
	* unix/configure: autoconf
	
2006-11-26  Joe English  <jenglish@users.sourceforge.net>
	* generic/ttk/ttkWidget.c, generic/ttk/ttkPaned.c Fix for #1603506
	* library/ttk/button.tcl, library/ttk/combobox.tcl,
	library/ttk/utils.tcl: Rename ttk::CopyBindings to ttk::copyBindings
	* generic/ttk/ttkTreeview.c, doc/ttk_treeview.n: 
	-displaycolumns {} now means "no columns" instead of "all columns".
	Use -displaycolumns #all for "all columns" [Fixes #1547622].

2006-11-26  Daniel Steffen  <das@users.sourceforge.net>

	* tcl.m4 (Linux): --enable-64bit support. [Patch 1597389], [Bug 1230558]
	* configure: autoconf-2.59

2006-11-24  Jeff Hobbs  <jeffh@ActiveState.com>
