@@ -897,7 +897,7 @@ test menu-3.67 {MenuWidgetCmd procedure, bad option} {
     catch {destroy .m1}
     menu .m1
     list [catch {.m1 foo} msg] $msg [destroy .m1]
-} {1 {bad option "foo": must be activate, add, cget, clone, configure, delete, entrycget, entryconfigure, index, insert, invoke, post, postcascade, type, unpost, or yposition} {}}
+} {1 {bad option "foo": must be activate, add, cget, clone, configure, delete, entrycget, entryconfigure, index, insert, invoke, post, postcascade, type, unpost, xposition, or yposition} {}}
 test menu-3.68 {MenuWidgetCmd procedure, fix for bug#508988} {
     set t .t
     set m1 .t.m1
@@ -917,6 +917,23 @@ test menu-3.68 {MenuWidgetCmd procedure, fix for bug#508988} {
     destroy $t;
     set l;
 } {1 1}
+test menu-3.69 {MenuWidgetCmd procedure, "xposition" option} -setup {
+    catch {destroy .m1}
+    menu .m1
+} -body {
+    .m1 xposition
+} -cleanup {
+    destroy .m1
+} -returnCodes error -result {wrong # args: should be ".m1 xposition index"}
+test menu-3.70 {MenuWidgetCmd procedure, "xposition" option} -setup {
+    catch {destroy .m1}
+    menu .m1
+} -body {
+    .m1 xposition 1
+    subst {} ;# just checking that the xposition does not produce an error...
+} -cleanup {
+    destroy .m1
+} -result {}
 
 test menu-4.1 {TkInvokeMenu: disabled} {
     catch {destroy .m1}
