@@ -1,3 +1,12 @@
+2006-12-04  Donal K. Fellows  <dkf@users.sf.net>
+
+	TIP #286 IMPLEMENTATION
+
+	* generic/tkMenu.c (MenuWidgetObjCmd, MenuDoXPosition): 
+	* doc/menu.n, tests/menu.test: Added an [$menu xposition] subcommand
+	which is useful in menubars and when menus use multiple columns. Many
+	thanks to Schelte Bron for the implementation.
+
 2006-12-01  Kevin Kenny  <kennykb@acm.org>
 
 	TIP #300 IMPLEMENTATION
